[tool.poetry]
name = "bot-helper-dm"
version = "0.1.0"
description = ""
authors = ["Mariia Bulavina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.41"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
